--- a/gfarm_v2/trunk/server/gfmd/Makefile
+++ b/gfarm_v2/trunk/server/gfmd/Makefile
@@ -32,7 +32,7 @@ PUBLIC_OBJS  =
 SRCS =	gfmd.c thrpool.c callout.c subr.c rpcsubr.c watcher.c \
 	user.c group.c host.c \
 	peer_watcher.c peer.c local_peer.c remote_peer.c abstract_host.c \
-	netsendq.c dead_file_copy.c process.c job.c \
+	netsendq.c dead_file_copy.c file_replication.c process.c job.c \
 	dir.c inode.c fs.c back_channel.c acl.c journal_file.c \
 	mdhost.c gfmd_channel.c mdcluster.c relay.c \
 	db_access.c db_common.c db_none.c quota.c xattr.c \
@@ -42,7 +42,7 @@ SRCS =	gfmd.c thrpool.c callout.c subr.c rpcsubr.c watcher.c \
 OBJS =	gfmd.o thrpool.o callout.o subr.o rpcsubr.o watcher.o \
 	user.o group.o host.o \
 	peer_watcher.o peer.o local_peer.o remote_peer.o abstract_host.o \
-	netsendq.o dead_file_copy.o process.o job.o \
+	netsendq.o dead_file_copy.o file_replication.o process.o job.o \
 	dir.o inode.o fs.o back_channel.o acl.o journal_file.o \
 	mdhost.o gfmd_channel.o mdcluster.o relay.o \
 	db_access.o db_common.o db_none.o quota.o xattr.o \
@@ -77,7 +77,7 @@ $(OBJS): $(DEPGFARMINC) \
 	user.h group.h host.h peer_watcher.h \
 	peer.h peer_impl.h local_peer.h remote_peer.h \
 	abstract_host.h abstract_host_impl.h netsendq.h netsendq_impl.h \
-	dead_file_copy.h process.h job.h \
+	dead_file_copy.h file_replication.h process.h job.h \
 	dir.h inode.h fs.h back_channel.h protocol_state.h quota.h xattr.h \
 	journal_file.h db_journal.h db_journal_apply.h \
 	gfmd_channel.h mdhost.h mdcluster.h relay.h
