--- a/gfarm_v2/branches/2.5/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.5/include/gfarm/gfarm_config.h.in
@@ -8,7 +8,7 @@
 /* Define if building universal (internal helper macro) */
 #undef AC_APPLE_UNIVERSAL_BUILD
 
-/* support XML extended attributs and searching by XPath */
+/* support XML extended attributes and XPath search */
 #undef ENABLE_XMLATTR
 
 /* Define to 1 if you have the `backtrace_symbols' function. */
