Add documents of 'gfhostgroup' and 'gfrepattr'

--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
@@ -1,5 +1,4 @@
-DOCBOOK = \
-	gfchgrp.1 \
+DOCBOOK = \ gfchgrp.1 \
 	gfchmod.1 \
 	gfchown.1 \
 	gfdf.1 \
@@ -44,7 +43,10 @@ DOCBOOK = \
 	gfperf.rb.1 \
 	gfstress.rb.1 \
 	gfservice.1 \
-	gfservice-agent.1
+	gfservice-agent.1 \
+	gfrepattr.1 \
+	gfhostgroup.1
+
 
 #	gfarm_agent.1 \
 #	gfcd.1 \
