rename symbols like a "replicainfo" to a "repattr" because that's similar to other symbol names.  Reviewed by n-soda@ (ticket #343)

--- a/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
+++ b/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
@@ -97,7 +97,7 @@ SRCS = \
 	sockutil.c \
 	timespec.c \
 	url.c \
-	replicainfo.c \
+	repattr.c \
 	$(globus_srcs) \
 	$(optional_srcs)
 
@@ -178,7 +178,7 @@ OBJS = \
 	sockutil.lo \
 	timespec.lo \
 	url.lo \
-	replicainfo.lo \
+	repattr.lo \
 	$(globus_objs) \
 	$(optional_objs)
 
