Add manuals of 'gfnop-journal' command. (Ticket #398)

--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/Makefile.inc
@@ -48,7 +48,8 @@ DOCBOOK = \
 	gfservice.1 \
 	gfservice-agent.1 \
 	gfrepattr.1 \
-	gfhostgroup.1
+	gfhostgroup.1 \
+	gfnop-journal.1
 
 #	gfarm_agent.1 \
 #	gfcd.1 \
