--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
@@ -45,7 +45,8 @@ DOCBOOK = \ gfchgrp.1 \
 	gfservice.1 \
 	gfservice-agent.1 \
 	gfrepattr.1 \
-	gfhostgroup.1
+	gfhostgroup.1 \
+	gfnop-journal.1
 
 
 #	gfarm_agent.1 \
