Rename 'gfnop-journal' to 'gfjournaladmin' and move from 'util' to 'gftool'.

--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/Makefile.inc
@@ -49,7 +49,7 @@ DOCBOOK = \
 	gfservice-agent.1 \
 	gfrepattr.1 \
 	gfhostgroup.1 \
-	gfnop-journal.1
+	gfjournaladmin.1
 
 #	gfarm_agent.1 \
 #	gfcd.1 \
